<resources>
    <string name="app_name">CityEventsAndr</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="event_description">Descripción</string>
    <string name="event_date">Fecha del evento</string>
    <string name="event_category">Categoría</string>
    <string name="event_price">Precio</string>
    <string name="register">Registrar evento</string>
    <string name="event_capacity">Capacidad</string>
    <string name="select_location">select_location</string>
    <string name="select_artist">select_artist</string>
    <string name="location_name">Nombre</string>
    <string name="lcoation_description">Descripción</string>
    <string name="category">Categoría</string>
    <string name="location_street">Calle</string>
    <string name="postalCode">Código Postal</string>
    <string name="register_date">Fecha registro</string>
    <string name="disabled_access">Acceso discapacitados</string>
    <string name="location_register_button">Registrar Localización</string>
    <string name="delete_location">Borrar localización</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="active">Activo</string>
    <string name="register_artist">Registrar Artista</string>
    <string name="followers">Seguidores</string>
    <string name="genre">Género</string>
    <string name="type">Tipo</string>
    <string name="surname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="height">Altura</string>

</resources>