<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    android:padding="10dp"
    tools:context=".view.RegisterEventView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_del_evento"
            android:inputType="text" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_description"
            android:inputType="text" />

        <EditText
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/event_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_capacity"
            android:inputType="number" />

        <EditText
            android:id="@+id/event_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_category"
            android:inputType="text" />

        <EditText
            android:id="@+id/event_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_price"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinnerLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="5dp"
            android:prompt="@string/select_location" />

        <Spinner
            android:id="@+id/spinnerArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="5dp"
            android:prompt="@string/select_artist" />

    </LinearLayout>

    <Button
        android:id="@+id/register_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerEvent"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="170dp" />


</androidx.constraintlayout.widget.ConstraintLayout>