<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterArtistView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/artist_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname" />

        <EditText
            android:id="@+id/artist_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type" />

        <EditText
            android:id="@+id/artist_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genre" />

        <EditText
            android:id="@+id/artist_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/followers"
            android:inputType="number" />

        <EditText
            android:id="@+id/artist_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/artist_birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:ems="10"
            android:inputType="date" />

        <CheckBox
            android:id="@+id/artist_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active" />
    </LinearLayout>


    <Button
        android:id="@+id/register_artist_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="registerArtist"
        android:text="@string/register_artist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/artist_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:onClick="selectImage"
        app:layout_constraintBottom_toTopOf="@+id/register_artist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_crop"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>